Fix on breaking news spacing

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -151,8 +151,14 @@ body {
     align-items: center;
     overflow: hidden;
     margin-left: 256px;
+    border-bottom: 16px solid #FAFAFA;
     border-radius: 8px;
-    margin: 0 20px 0 276px;
+    margin: 0 40px 0 276px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
 }
 
 .breaking-title {
@@ -174,6 +180,10 @@ body {
 
 #ticker-content {
     white-space: pre;
+}
+
+#news-container {
+    margin-top: 70px;
 }
 
 @keyframes ticker {
